build: remove unnecessary javac options in zeebe/protocol